任意文件上传

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken-refresh":"",
     "underscore":"",
     "async":"",
-    "formidable":""
+    "formidable":"",
+	"request":"",
+	"cheerio":""
   }
 }
